# MMR_semantic-segmentation_v1

./: README.md
MMR_EN:DE_CODER/: How_To-Run_MiniData_Visualize_Plot.ipynb  Mini_Dataset_ZarrFile.ipynb  README.md  config.yaml  loss_dict.pkl  pyproject.toml
MMR_EN:DE_CODER/MMR_Segmentation/: Data_Loader.py  MMR_Model_Training.py  Main_MMR_SegModel.py  Pre_Process.py  __init__.py  common_utils.py  model_inference.py
MMR_EN:DE_CODER/MMR_Segmentation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
MMR_EN:DE_CODER/checkpoints/: README copy.md
MMR_Seg_Unet/: Visualization_Segment_Prediction.py  data_preprocessing.py  mmr_seg_readme.md
MMR_Seg_Unet/BackUpConfig/: train_sarrarp50.sh.backup
MMR_Seg_Unet/ConfigModelUnetPlus/: train_sarrarp50.sh
MMR_Seg_Unet/MMR_Core_ModelData/: ModelEval.py  ModelTraining.py  RUN-Command)bash$$.md  dice_loss.py  utils.py
MMR_Seg_Unet/MMR_Core_ModelData/SurgicalDataClass/classes/: sarrarp50SegClasses.json
MMR_Seg_Unet/MMR_Core_ModelData/SurgicalDataClass/dataloaders/: SegNetDataLoaderV1_SAR.py
MMR_Seg_Unet/MMR_Core_ModelData/SurgicalDataClass/datasets/sarrarp50/: read_download from drive.md
MMR_Seg_Unet/MMR_Core_ModelData/UArchModel/: resnet_unet.py  segnet.py  unet.py  unet_parts.py
MMR_Seg_Unet/results/: PLS_READ_SEND_EMAIL_I'll SEND YOU CheckPoint and Train.Log.md
